crates/compiler/tests/scanner_test/snapshots/integration_test__scanner_test__scan_rc_data-6.snap
---
source: crates/compiler/tests/scanner_test/mod.rs
assertion_line: 81
expression: "<textarea><div/></textareas>"
---
- StartTag:
    name: textarea
    attributes: []
    self_closing: false
- Text: "<div/></textareas>"

